--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cf_apm</groupId>
     <artifactId>cf_apm</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>CF Application Package Manager</name>
 
     <packaging>war</packaging>
     <build>
@@ -27,7 +28,6 @@
                     <verbose>true</verbose>
                     <fork>true</fork>
                     <executable>C:\Program Files\Java\jdk-11\bin\javac</executable>
-                    <encoding>UTF-8</encoding>
                     <release>11</release>
                 </configuration>
             </plugin>
