Nearly finish project

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,14 +16,23 @@
     </listener>
 
     <servlet>
+        <display-name>Dispatcher Servlet</display-name>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value></param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-<!--        <url-pattern>*.form</url-pattern>-->
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+
+    <session-config>
+        <session-timeout>10</session-timeout>
+    </session-config>
+
 </web-app>
